== SGT release v1.0.0 - ??? ==

- Initial commit.
- Added template cmake files.
- Preparing for initial build of Module loader.
- Successfully built module loader.
- Compiled template launcher app.
- Successfully built template launcher with memory module.