@@ -8,4 +8,6 @@ LINK_DIRECTORIES (${BOOST_LIB_DIR})
 # LINK_DIRECTORIES (${LUA_LIB_DIR})
 
 ADD_SUBDIRECTORY(ModuleLoader)
-ADD_SUBDIRECTORY(template_launcher)
+ADD_SUBDIRECTORY(lunagen)
+
+# ADD_SUBDIRECTORY(template_launcher)
