@@ -6,3 +6,4 @@
 - Successfully built module loader.
 - Compiled template launcher app.
 - Successfully built template launcher with memory module.
+- Added lunagen project.
